# crowd_checker

./: Makefile  README.md  pyproject.toml
crowd_checker/: db.sqlite3  manage.py
crowd_checker/crowd_checker/: asgi.py  settings.py  urls.py  wsgi.py
crowd_checker/crowd_checker_api/: apps.py  models.py  serializers.py  urls.py  views.py
crowd_checker/crowd_checker_api/migrations/: 0001_initial.py  0002_establishmentstatus.py
